--- a/index.html
+++ b/index.html
@@ -141,10 +141,7 @@
         </div>
 
         <div class="soundcloud">
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" 
-                    allow="autoplay" 
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/32435307&color=%23ff0000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-            </iframe>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2004455252&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/paradymshift" title="ParadymShift, Plant-BASED Ⓥegan Shinobi" target="_blank" style="color: #cccccc; text-decoration: none;">ParadymShift, Plant-BASED Ⓥegan Shinobi</a> · <a href="https://soundcloud.com/paradymshift/sets/paradymshift-music" title="ParadymShift Music" target="_blank" style="color: #cccccc; text-decoration: none;">ParadymShift Music</a></div>
         </div>
 
         <div class="socials">
