Added Privacy Policy

--- a/index.html
+++ b/index.html
@@ -128,6 +128,45 @@
             h1 { font-size: 2rem; }
             .bio p { font-size: 1rem; }
         }
+
+        .privacy {
+            background: rgba(20, 20, 20, 0.9);
+            padding: 2rem;
+            border-radius: 10px;
+            border: 1px solid #00ff00;
+            box-shadow: 0 0 15px rgba(0, 255, 0, 0.3);
+            margin: 2rem auto;
+            max-width: 800px;
+            text-align: left;
+        }
+
+        .privacy h2 {
+            font-size: 1.8rem;
+            color: #ff0000;
+            text-shadow: 0 0 5px #ff0000;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        .privacy p {
+            font-size: 1rem;
+            color: #ffffff;
+            margin-bottom: 1rem;
+        }
+
+        .privacy a {
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .privacy a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 600px) {
+            .privacy h2 { font-size: 1.5rem; }
+            .privacy p { font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
@@ -159,6 +198,23 @@
         </div>
     </div>
 
+    <div class="privacy">
+        <h2>Privacy Policy</h2>
+        <p>
+            Welcome to ParadymShift’s official site. I value your privacy and want to be transparent about data collection.
+        </p>
+        <p>
+            <strong>Google Analytics</strong>: This site uses Google Analytics to track user engagement, such as page views and time spent on the site. This helps me understand how visitors interact with my content and improve the experience. Google Analytics collects anonymous data like your IP address, browser type, and device information. For more details, see <a href="https://policies.google.com/privacy" target="_blank" style="color: #00ff00;">Google’s Privacy Policy</a>.
+        </p>
+        <p>
+            <strong>SoundCloud Embedded Player</strong>: My site includes an embedded SoundCloud player to share my music. SoundCloud may collect usage data, such as play counts or interactions with the player, per their own policies. To learn more, check out <a href="https://soundcloud.com/pages/privacy" target="_blank" style="color: #00ff00;">SoundCloud’s Privacy Policy</a>.
+        </p>
+        <p>
+            No personal data is collected directly by this site beyond what’s described above. If you have questions, hit me up on <a href="https://x.com/paradymshiftveg" target="_blank" style="color: #00f;">X</a> or <a href="https://instagram.com/paradymshiftvegan" target="_blank" style="color: #800080;">Instagram</a>.
+        </p>
+        <p>Last updated: April 12, 2025</p>
+    </div>
+    
     <footer>
         <p>&copy; 2025 ParadymShift. All rights reserved.</p>
     </footer>
