--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
     </div>
 
     <footer>
-        <p>© 2025 ParadymShift. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact</a></p>
+        <p>© 2025 ParadymShift. All rights reserved. | <a href="privacypolicy.html">Privacy Policy</a> | <a href="contact.html">Contact</a></p>
     </footer>
 
     <script>
