--- a/contact.html
+++ b/contact.html
@@ -184,11 +184,11 @@
                 Yo, want to connect? Hit me up on my socials or drop an email. I’m all about that vegan rap life and coding grind, so let’s vibe!
             </p>
             <div class="contact-links">
-                <a href="https://x.com/paradymshiftveg" class="twitter" target="_blank">@ParadymShiftVeg</a>
-                <a href="https://instagram.com/paradymshiftvegan" class="instagram" target="_blank">@ParadymShiftVegan</a>
-                <a href="https://www.facebook.com/ParadymShiftMusic" class="facebook" target="_blank">ParadymShiftMusic</a>
-                <a href="https://youtube.com/@paradymshiftvegan" class="youtube" target="_blank">@ParadymShiftVegan</a>
-                <a href="mailto:paradymshiftofficial@gmail.com" class="email">paradymshiftofficial@gmail.com</a>
+                <a href="https://x.com/paradymshiftveg" class="twitter" target="_blank">X (Twitter) @ParadymShiftVeg</a>
+                <a href="https://instagram.com/paradymshiftvegan" class="instagram" target="_blank">Instagram @ParadymShiftVegan</a>
+                <a href="https://www.facebook.com/ParadymShiftMusic" class="facebook" target="_blank">Facebook ParadymShift Music</a>
+                <a href="https://youtube.com/@paradymshiftvegan" class="youtube" target="_blank">YouTube @ParadymShiftVegan</a>
+                <a href="mailto:paradymshiftofficial@gmail.com" class="email">Email: paradymshiftofficial@gmail.com</a>
             </div>
         </div>
 
