--- a/songs.html
+++ b/songs.html
@@ -87,6 +87,7 @@
             max-width: 800px;
             margin: 2rem auto;
             padding: 0 1rem;
+            text-align: center;
         }
 
         .song-list {
@@ -95,7 +96,6 @@
             border-radius: 10px;
             border: 1px solid #00ff00;
             box-shadow: 0 0 15px rgba(0, 255, 0, 0.3);
-            margin-bottom: 2rem;
         }
 
         .song-list ul {
@@ -118,46 +118,6 @@
             text-shadow: 0 0 5px #ff0000;
         }
 
-        .lyrics {
-            background: rgba(20, 20, 20, 0.9);
-            padding: 2rem;
-            border-radius: 10px;
-            border: 1px solid #00ff00;
-            box-shadow: 0 0 15px rgba(0, 255, 0, 0.3);
-        }
-
-        .lyric-line {
-            margin: 0.5rem 0;
-            position: relative;
-        }
-
-        .annotated {
-            color: #ffffff;
-            position: relative;
-            cursor: help;
-            border-bottom: 1px dotted #ffff00;
-        }
-
-        .annotation {
-            display: none;
-            position: absolute;
-            background: rgba(0, 0, 0, 0.9);
-            color: #ffffff;
-            padding: 0.5rem;
-            border-radius: 5px;
-            border: 1px solid #ff0000;
-            width: 200px;
-            z-index: 10;
-            top: -100%;
-            left: 50%;
-            transform: translateX(-50%);
-            box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
-        }
-
-        .annotated:hover .annotation {
-            display: block;
-        }
-
         footer {
             text-align: center;
             padding: 1rem;
@@ -175,10 +135,6 @@
             nav ul {
                 flex-direction: column;
                 gap: 1rem;
-            }
-            .annotation {
-                width: 150px;
-                font-size: 0.9rem;
             }
         }
     </style>
@@ -199,52 +155,9 @@
         <div class="song-list">
             <h2>Song List</h2>
             <ul>
-                <li><a href="#2020-vision">2020 Vision (Prod. Black Rose Beatz)</a></li>
-                <li><a href="#paradym-shift">Paradym Shift</a></li>
+                <li><a href="vegan-shinobi.html">Vegan Shinobi</a></li>
+                <li><a href="paradym-shift.html">Paradym Shift</a></li>
             </ul>
-        </div>
-
-        <div class="lyrics" id="2020-vision">
-            <h2>2020 Vision (Prod. Black Rose Beatz)</h2>
-            <div class="lyric-line">
-                oh no
-                Paradym's been at it again ;)
-                you already knowww ^-^
-                we about to GET it!
-
-                yo it's that año 2020
-                I got 20/20 vision
-                got precision like excision
-                multiples that's no division
-            </div>
-            <div class="lyric-line">
-                <span class="annotated">my decision, no derision
-                    <span class="annotation">I used to be very "hippy"-like and was all about peace and love with no unkindness.</span>
-                </span>
-            </div>
-            <div class="lyric-line">
-                Shift the game, bring the light
-            </div>
-        </div>
-
-        <div class="lyrics" id="paradym-shift">
-            <h2>Paradym Shift</h2>
-            <div class="lyric-line">
-                <span class="annotated">Code by day, rhymes by night
-                    <span class="annotation">Nods to my dual life as a programmer and rapper.</span>
-                </span>
-            </div>
-            <div class="lyric-line">
-                Vegan vibes, keep it right
-            </div>
-            <div class="lyric-line">
-                <span class="annotated">Mojo flow, future bright
-                    <span class="annotation">Refers to learning Mojo programming language.</span>
-                </span>
-            </div>
-            <div class="lyric-line">
-                Change the world, line by line
-            </div>
         </div>
     </div>
     
