--- a/songs.html
+++ b/songs.html
@@ -155,7 +155,7 @@
         <div class="song-list">
             <h2>Song List</h2>
             <ul>
-                <li><a href="vegan-shinobi.html">Vegan Shinobi</a></li>
+                <li><a href="2020vl.html">2020 Vision (Prod. Black Rose Beatz)</a></li>
                 <li><a href="paradym-shift.html">Paradym Shift</a></li>
             </ul>
         </div>
