Update and rename 2020vl to 2020vl.html
need to make sure that it's formatting correctly when it's deployed.

--- a/2020vl.html
+++ b/2020vl.html
@@ -169,14 +169,24 @@
 
     <div class="container">
         <div class="lyrics">
-            <h2>Vegan Shinobi</h2>
+            <h2>2020 Vision (Prod. Black Rose Beatz)</h2>
             <div class="lyric-line">
-                <span class="annotated">Plant-based ninja in the night
-                    <span class="annotation">Reference to my vegan lifestyle and stealthy approach to music.</span>
-                </span>
+                oh no
             </div>
             <div class="lyric-line">
-                Spittin' rhymes that ignite
+                Paradym's been at it again ;)
+            </div>
+            <div class="lyric-line">
+                you already knowww ^-^
+            </div>
+            <div class="lyric-line">
+                we about to GET it!
+            </div>
+            <div class="lyric-line">
+                 
+            </div>
+            <div class="lyric-line">
+                yo it's that año 2020
             </div>
             <div class="lyric-line">
                 <span class="annotated">No meat, just beats, keep it tight
