--- a/2020vl.html
+++ b/2020vl.html
@@ -168,36 +168,108 @@
     </nav>
 
     <div class="container">
-        <div class="lyrics">
-            <h2>2020 Vision (Prod. Black Rose Beatz)</h2>
-            <div class="lyric-line">
-                oh no
-            </div>
-            <div class="lyric-line">
-                Paradym's been at it again ;)
-            </div>
-            <div class="lyric-line">
-                you already knowww ^-^
-            </div>
-            <div class="lyric-line">
-                we about to GET it!
-            </div>
-            <div class="lyric-line">
-                 
-            </div>
-            <div class="lyric-line">
-                yo it's that año 2020
-            </div>
-            <div class="lyric-line">
-                <span class="annotated">No meat, just beats, keep it tight
-                    <span class="annotation">Emphasizing veganism and musical precision.</span>
-                </span>
-            </div>
-            <div class="lyric-line">
-                Shift the game, bring the light
-            </div>
-        </div>
+    <div class="lyrics">
+        <h2>2020 Vision (Prod. Black Rose Beatz)</h2>
+        <p class="lyric-block">
+            oh no<br>
+            Paradym's been at it again ;)<br>
+            you already knowww ^-^<br>
+            we about to GET it!<br>
+            <br>
+            yo it's that año 2020<br>
+            I got 20/20 vision<br>
+            got precision like excision<br>
+            multiples that's no division<br>
+            <span class="annotated">my decision, no derision
+                <span class="annotation">I used to be "hippie"-like and was all about being peaceful, kind, and loving in all things.</span>
+            </span><br>
+            breaking free from mental prisons<br>
+            white hot, my soul has risen<br>
+            so my bars hit like collision<br>
+            <br>
+            I'm getting sick of admonition<br>
+            I'm getting strait to abolition<br>
+            <br>
+            on a mission, mental ammunition<br>
+            blast away the competition<br>
+            devil watchin my position<br>
+            so I claim my requisition<br>
+            <br>
+            HOLD UP<br>
+            <br>
+            yuh wait a minute I go too hard<br>
+            I don't even flex, yo mans been feeling like the vanguard<br>
+            all y'all chose a role, I got my powers like a wildcard<br>
+            channel fire through my throat, that's why I'm leavin eardrums charred!<br>
+            <br>
+            said I'm taking what's mine<br>
+            no more wasting my time<br>
+            give a **** bout the grime<br>
+            ice on fire with the rhyme<br>
+            neva stop, I'ma climb<br>
+            chasing dreams in my prime<br>
+            and they call me Paradym<br>
+            comin thru with the sublime<br>
+            life calls, but you decline<br>
+            so I rise while you recline<br>
+            <br>
+            ain't NO crime, I stack my chips<br>
+            the motion of my money: flips<br>
+            only truth, on my lips<br>
+            like my life, in my grips<br>
+            vision steady, never slips<br>
+            inner healing, journey trips<br>
+            across the world, ocean ships<br>
+            I'm finna squeeze the game, make it drip<br>
+            <br>
+            LITSAUCE 🤯🤯🔥🔥💯<br>
+            EVERY MONTH<br>
+            <br>
+            damn, you know I'm bout it<br>
+            said I'm back again<br>
+            yet lack slack and sin<br>
+            track wit facts and then<br>
+            I crack the pack and blend<br>
+            all y'all kissed the wrack<br>
+            embraced the wack and grinned<br>
+            <br>
+            some call me loco<br>
+            think im a joke, oh<br>
+            no saben como mi coco lo chocó<br>
+            <br>
+            yeah bet I am blessed<br>
+            put to the test<br>
+            no mess to stress, rest my chest blessed best<br>
+            right to the crest like I'm winnin my quest<br>
+            <br>
+            P. Shift In the house, What!<br>
+            Lemme see you get yo hands up<br>
+            bet chu know we bouta get this place lit<br>
+            elevate yo city lemme see you feel this; GO!<br>
+            <br>
+            better than ever I'm blessed with the medicine<br>
+            already evident love like I'm heaven sent<br>
+            super like Clark Kent, doing my part<br>
+            its social isolate --stay in your apartment<br>
+            <br>
+            animal ag is the head of infectious disease and atherosclerosis, we're down on our knees,<br>
+            end the world just for grease, cheese<br>
+            killing and killing, cancer to Earth's peace!<br>
+            <br>
+            mass extinction... already under way<br>
+            no more time left to wake up, I guess we better pray<br>
+            anthropocene scene, we're killing faster than the asteroid<br>
+            we metastasized everywhere and now we're all headed to the VOID<br>
+            <br>
+            LITSAUCE 🤯🤯🔥🔥💯<br>
+            EVERY MONTH!<br>
+            <span class="annotated">
+                <span class="annotation">Emphasizing veganism and musical precision.</span>
+            </span><br>
+            Shift the game, bring the light
+        </p>
     </div>
+</div>
     
     <footer>
         <p>© 2025 ParadymShift. All rights reserved. | <a href="privacypolicy.html">Privacy Policy</a> | <a href="contact.html">Contact</a></p>
