--- a/index.html
+++ b/index.html
@@ -191,8 +191,11 @@
         </div>
 
         <div class="socials">
-            <a href="https://x.com/paradymshiftveg" class="twitter" target="_blank">@ParadymShiftVeg</a>
-            <a href="https://instagram.com/paradymshiftvegan" class="instagram" target="_blank">@ParadymShiftVegan</a>
+            <a href="https://bandcamp.com/paradymshift" class="bandcamp" target="_blank">MY MUSIC</a>
+            <a href="https://x.com/paradymrap" class="twitter" target="_blank">X</a>
+            <a href="https://instagram.com/paradymrap" class="instagram" target="_blank">Insta</a>
+            <a href="https://facebook.com/paradymrap" class="facebook" target="_blank">Facebook</a>
+            <a href="https://youtube.com/@paradymrap" class="youtube" target="_blank">YouTube</a>
         </div>
     </div>
     
