--- a/contact.html
+++ b/contact.html
@@ -184,10 +184,11 @@
                 Yo, want to connect? Hit me up on my socials or drop an email. I’m all about that vegan rap life and coding grind, so let’s vibe!
             </p>
             <div class="contact-links">
-                <a href="https://x.com/paradymshiftveg" class="twitter" target="_blank">X (Twitter) @ParadymShiftVeg</a>
-                <a href="https://instagram.com/paradymshiftvegan" class="instagram" target="_blank">Instagram @ParadymShiftVegan</a>
-                <a href="https://www.facebook.com/ParadymShiftMusic" class="facebook" target="_blank">Facebook ParadymShift Music</a>
-                <a href="https://youtube.com/@paradymshiftvegan" class="youtube" target="_blank">YouTube @ParadymShiftVegan</a>
+                <a href="https://bandcamp.com/paradymshift" class="bandcamp" target="_blank">MY MUSIC</a>
+                <a href="https://x.com/paradymrap" class="twitter" target="_blank">X</a>
+                <a href="https://instagram.com/paradymrap" class="instagram" target="_blank">Insta</a>
+                <a href="https://facebook.com/paradymrap" class="facebook" target="_blank">Facebook</a>
+                <a href="https://youtube.com/@paradymrap" class="youtube" target="_blank">YouTube</a
                 <a href="mailto:paradymshiftofficial@gmail.com" class="email">Email: paradymshiftofficial@gmail.com</a>
             </div>
         </div>
