--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
 
         <div class="socials">
-            <a href="https://bandcamp.com/paradymshift" class="bandcamp" target="_blank">MY MUSIC</a>
+            <a href="https://bandcamp.com/paradymshiftmusic" class="bandcamp" target="_blank">MY MUSIC</a>
             <a href="https://x.com/paradymrap" class="twitter" target="_blank">X</a>
             <a href="https://instagram.com/paradymrap" class="instagram" target="_blank">Insta</a>
             <a href="https://facebook.com/paradymrap" class="facebook" target="_blank">Facebook</a>
