--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
                 Yo, want to connect? Hit me up on my socials or drop an email. I’m all about that vegan rap life and coding grind, so let’s vibe!
             </p>
             <div class="contact-links">
-                <a href="https://bandcamp.com/paradymshift" class="bandcamp" target="_blank">MY MUSIC</a>
+                <a href="https://bandcamp.com/paradymshiftmusic" class="bandcamp" target="_blank">MY MUSIC</a>
                 <a href="https://x.com/paradymrap" class="twitter" target="_blank">X</a>
                 <a href="https://instagram.com/paradymrap" class="instagram" target="_blank">Insta</a>
                 <a href="https://facebook.com/paradymrap" class="facebook" target="_blank">Facebook</a>
